// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipesBranchStack generates a branch stack for a feature branch 1`] = `
{
  "Mappings": {
    "AWSCloudFrontPartitionHostedZoneIdMap": {
      "aws": {
        "zoneId": "Z2FDTNDATAQYW2",
      },
      "aws-cn": {
        "zoneId": "Z3RFFRIM2A3IF5",
      },
    },
  },
  "Outputs": {
    "ExportRecipesDistributionBranch": {
      "Export": {
        "Name": "Recipes-Distribution-Branch",
      },
      "Value": {
        "Ref": "SiteDistribution3FF9535D",
      },
    },
    "ExportRecipesSiteUrlBranch": {
      "Export": {
        "Name": "Recipes-SiteUrl-Branch",
      },
      "Value": "https://branch.recipes.pliddy.com",
    },
    "ExportRecipesSubdomainAliasRecordBranch": {
      "Export": {
        "Name": "Recipes-SubdomainAliasRecord-Branch",
      },
      "Value": "branch.recipes.pliddy.com",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "BranchAliasRecord6D790B76": {
      "Properties": {
        "AliasTarget": {
          "DNSName": {
            "Fn::GetAtt": [
              "SiteDistribution3FF9535D",
              "DomainName",
            ],
          },
          "HostedZoneId": {
            "Fn::FindInMap": [
              "AWSCloudFrontPartitionHostedZoneIdMap",
              {
                "Ref": "AWS::Partition",
              },
              "zoneId",
            ],
          },
        },
        "HostedZoneId": "DUMMY",
        "Name": "branch.recipes.pliddy.com.",
        "Type": "A",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "SiteDistribution3FF9535D": {
      "Properties": {
        "DistributionConfig": {
          "Aliases": [
            "branch.recipes.pliddy.com",
          ],
          "CustomErrorResponses": [
            {
              "ErrorCachingMinTTL": 600,
              "ErrorCode": 400,
              "ResponseCode": 400,
              "ResponsePagePath": "/404.html",
            },
            {
              "ErrorCachingMinTTL": 600,
              "ErrorCode": 403,
              "ResponseCode": 403,
              "ResponsePagePath": "/404.html",
            },
            {
              "ErrorCachingMinTTL": 600,
              "ErrorCode": 404,
              "ResponseCode": 404,
              "ResponsePagePath": "/404.html",
            },
          ],
          "DefaultCacheBehavior": {
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
            ],
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": false,
            "OriginRequestPolicyId": "88a5eaf4-2fd4-4709-b370-b4c650ea3fcf",
            "ResponseHeadersPolicyId": {
              "Fn::ImportValue": "Recipes-ResponseHeadersPolicy-Dev",
            },
            "TargetOriginId": "TestBranchStackSiteDistributionOrigin1B02A7E75",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2and3",
          "IPV6Enabled": true,
          "Origins": [
            {
              "DomainName": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::Select": [
                        0,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Fn::Select": [
                                5,
                                {
                                  "Fn::Split": [
                                    ":",
                                    {
                                      "Fn::ImportValue": "Recipes-BucketArn-Dev",
                                    },
                                  ],
                                },
                              ],
                            },
                          ],
                        },
                      ],
                    },
                    ".s3.us-east-1.amazonaws.com",
                  ],
                ],
              },
              "Id": "TestBranchStackSiteDistributionOrigin1B02A7E75",
              "OriginPath": "/branches/branch",
              "OriginShield": {
                "Enabled": true,
                "OriginShieldRegion": "us-east-1",
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": {
                  "Fn::Join": [
                    "",
                    [
                      "origin-access-identity/cloudfront/",
                      {
                        "Fn::ImportValue": "Recipes-OAI-Dev",
                      },
                    ],
                  ],
                },
              },
            },
          ],
          "PriceClass": "PriceClass_100",
          "ViewerCertificate": {
            "AcmCertificateArn": {
              "Fn::ImportValue": "Recipes-Certificate-Dev",
            },
            "MinimumProtocolVersion": "TLSv1.2_2021",
            "SslSupportMethod": "sni-only",
          },
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`RecipesBranchStack generates a branch stack for the main branch 1`] = `
{
  "Mappings": {
    "AWSCloudFrontPartitionHostedZoneIdMap": {
      "aws": {
        "zoneId": "Z2FDTNDATAQYW2",
      },
      "aws-cn": {
        "zoneId": "Z3RFFRIM2A3IF5",
      },
    },
  },
  "Outputs": {
    "ExportRecipesDistributionMain": {
      "Export": {
        "Name": "Recipes-Distribution-Main",
      },
      "Value": {
        "Ref": "SiteDistribution3FF9535D",
      },
    },
    "ExportRecipesSiteUrlMain": {
      "Export": {
        "Name": "Recipes-SiteUrl-Main",
      },
      "Value": "https://recipes.pliddy.com",
    },
    "ExportRecipesSubdomainAliasRecordMain": {
      "Export": {
        "Name": "Recipes-SubdomainAliasRecord-Main",
      },
      "Value": "recipes.pliddy.com",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "BranchAliasRecord6D790B76": {
      "Properties": {
        "AliasTarget": {
          "DNSName": {
            "Fn::GetAtt": [
              "SiteDistribution3FF9535D",
              "DomainName",
            ],
          },
          "HostedZoneId": {
            "Fn::FindInMap": [
              "AWSCloudFrontPartitionHostedZoneIdMap",
              {
                "Ref": "AWS::Partition",
              },
              "zoneId",
            ],
          },
        },
        "HostedZoneId": "DUMMY",
        "Name": "recipes.pliddy.com.",
        "Type": "A",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "SiteDistribution3FF9535D": {
      "Properties": {
        "DistributionConfig": {
          "Aliases": [
            "recipes.pliddy.com",
          ],
          "CustomErrorResponses": [
            {
              "ErrorCachingMinTTL": 600,
              "ErrorCode": 400,
              "ResponseCode": 400,
              "ResponsePagePath": "/404.html",
            },
            {
              "ErrorCachingMinTTL": 600,
              "ErrorCode": 403,
              "ResponseCode": 403,
              "ResponsePagePath": "/404.html",
            },
            {
              "ErrorCachingMinTTL": 600,
              "ErrorCode": 404,
              "ResponseCode": 404,
              "ResponsePagePath": "/404.html",
            },
          ],
          "DefaultCacheBehavior": {
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
            ],
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": false,
            "OriginRequestPolicyId": "88a5eaf4-2fd4-4709-b370-b4c650ea3fcf",
            "ResponseHeadersPolicyId": {
              "Fn::ImportValue": "Recipes-ResponseHeadersPolicy-Prod",
            },
            "TargetOriginId": "TestBranchStackSiteDistributionOrigin1B02A7E75",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2and3",
          "IPV6Enabled": true,
          "Origins": [
            {
              "DomainName": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::Select": [
                        0,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Fn::Select": [
                                5,
                                {
                                  "Fn::Split": [
                                    ":",
                                    {
                                      "Fn::ImportValue": "Recipes-BucketArn-Prod",
                                    },
                                  ],
                                },
                              ],
                            },
                          ],
                        },
                      ],
                    },
                    ".s3.us-east-1.amazonaws.com",
                  ],
                ],
              },
              "Id": "TestBranchStackSiteDistributionOrigin1B02A7E75",
              "OriginPath": "/branches/main",
              "OriginShield": {
                "Enabled": true,
                "OriginShieldRegion": "us-east-1",
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": {
                  "Fn::Join": [
                    "",
                    [
                      "origin-access-identity/cloudfront/",
                      {
                        "Fn::ImportValue": "Recipes-OAI-Prod",
                      },
                    ],
                  ],
                },
              },
            },
          ],
          "PriceClass": "PriceClass_100",
          "ViewerCertificate": {
            "AcmCertificateArn": {
              "Fn::ImportValue": "Recipes-Certificate-Prod",
            },
            "MinimumProtocolVersion": "TLSv1.2_2021",
            "SslSupportMethod": "sni-only",
          },
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`RecipesSharedStack generates a shared stack for a feature branch 1`] = `
{
  "Outputs": {
    "ExportRecipesBucketArnDev": {
      "Export": {
        "Name": "Recipes-BucketArn-Dev",
      },
      "Value": {
        "Fn::GetAtt": [
          "DomainBucket2544F3F1",
          "Arn",
        ],
      },
    },
    "ExportRecipesBucketNameDev": {
      "Export": {
        "Name": "Recipes-BucketName-Dev",
      },
      "Value": {
        "Ref": "DomainBucket2544F3F1",
      },
    },
    "ExportRecipesCertificateDev": {
      "Export": {
        "Name": "Recipes-Certificate-Dev",
      },
      "Value": {
        "Ref": "DomainCertificateF2015570",
      },
    },
    "ExportRecipesOAIDev": {
      "Export": {
        "Name": "Recipes-OAI-Dev",
      },
      "Value": {
        "Ref": "cloudfrontOAID153E53B",
      },
    },
    "ExportRecipesResponseHeadersPolicyDev": {
      "Export": {
        "Name": "Recipes-ResponseHeadersPolicy-Dev",
      },
      "Value": {
        "Ref": "ResponseHeadersPolicyDevE87E0ED6",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "DomainBucket2544F3F1": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AccessControl": "Private",
        "BucketName": "recipes.pliddy.com-dev",
        "OwnershipControls": {
          "Rules": [
            {
              "ObjectOwnership": "BucketOwnerEnforced",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "DomainBucketPolicyD68435CA": {
      "Properties": {
        "Bucket": {
          "Ref": "DomainBucket2544F3F1",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": {
                "CanonicalUser": {
                  "Fn::GetAtt": [
                    "cloudfrontOAID153E53B",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "DomainBucket2544F3F1",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "DomainCertificateF2015570": {
      "Properties": {
        "DomainName": "*.recipes.pliddy.com",
        "DomainValidationOptions": [
          {
            "DomainName": "*.recipes.pliddy.com",
            "HostedZoneId": "DUMMY",
          },
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestSharedStack/DomainCertificate",
          },
        ],
        "ValidationMethod": "DNS",
      },
      "Type": "AWS::CertificateManager::Certificate",
    },
    "ResponseHeadersPolicyDevE87E0ED6": {
      "Properties": {
        "ResponseHeadersPolicyConfig": {
          "CustomHeadersConfig": {
            "Items": [
              {
                "Header": "cache-control",
                "Override": true,
                "Value": "max-age=31536000",
              },
            ],
          },
          "Name": "ResponseHeadersPolicyDev",
          "RemoveHeadersConfig": {
            "Items": [
              {
                "Header": "server",
              },
            ],
          },
          "SecurityHeadersConfig": {
            "ContentTypeOptions": {
              "Override": true,
            },
            "FrameOptions": {
              "FrameOption": "DENY",
              "Override": true,
            },
            "ReferrerPolicy": {
              "Override": true,
              "ReferrerPolicy": "no-referrer",
            },
            "StrictTransportSecurity": {
              "AccessControlMaxAgeSec": 31536000,
              "IncludeSubdomains": true,
              "Override": false,
              "Preload": true,
            },
            "XSSProtection": {
              "ModeBlock": true,
              "Override": true,
              "Protection": true,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
    "cloudfrontOAID153E53B": {
      "Properties": {
        "CloudFrontOriginAccessIdentityConfig": {
          "Comment": "OAI for TestSharedStack",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`RecipesSharedStack generates a shared stack for the main branch 1`] = `
{
  "Outputs": {
    "ExportRecipesBucketArnProd": {
      "Export": {
        "Name": "Recipes-BucketArn-Prod",
      },
      "Value": {
        "Fn::GetAtt": [
          "DomainBucket2544F3F1",
          "Arn",
        ],
      },
    },
    "ExportRecipesBucketNameProd": {
      "Export": {
        "Name": "Recipes-BucketName-Prod",
      },
      "Value": {
        "Ref": "DomainBucket2544F3F1",
      },
    },
    "ExportRecipesCertificateProd": {
      "Export": {
        "Name": "Recipes-Certificate-Prod",
      },
      "Value": {
        "Ref": "DomainCertificateF2015570",
      },
    },
    "ExportRecipesOAIProd": {
      "Export": {
        "Name": "Recipes-OAI-Prod",
      },
      "Value": {
        "Ref": "cloudfrontOAID153E53B",
      },
    },
    "ExportRecipesResponseHeadersPolicyProd": {
      "Export": {
        "Name": "Recipes-ResponseHeadersPolicy-Prod",
      },
      "Value": {
        "Ref": "ResponseHeadersPolicyProdCC4F4A8E",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "DomainBucket2544F3F1": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AccessControl": "Private",
        "BucketName": "recipes.pliddy.com-prod",
        "OwnershipControls": {
          "Rules": [
            {
              "ObjectOwnership": "BucketOwnerEnforced",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "DomainBucketPolicyD68435CA": {
      "Properties": {
        "Bucket": {
          "Ref": "DomainBucket2544F3F1",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": {
                "CanonicalUser": {
                  "Fn::GetAtt": [
                    "cloudfrontOAID153E53B",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "DomainBucket2544F3F1",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "DomainCertificateF2015570": {
      "Properties": {
        "DomainName": "recipes.pliddy.com",
        "DomainValidationOptions": [
          {
            "DomainName": "recipes.pliddy.com",
            "HostedZoneId": "DUMMY",
          },
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestSharedStack/DomainCertificate",
          },
        ],
        "ValidationMethod": "DNS",
      },
      "Type": "AWS::CertificateManager::Certificate",
    },
    "ResponseHeadersPolicyProdCC4F4A8E": {
      "Properties": {
        "ResponseHeadersPolicyConfig": {
          "CustomHeadersConfig": {
            "Items": [
              {
                "Header": "cache-control",
                "Override": true,
                "Value": "max-age=31536000",
              },
            ],
          },
          "Name": "ResponseHeadersPolicyProd",
          "RemoveHeadersConfig": {
            "Items": [
              {
                "Header": "server",
              },
            ],
          },
          "SecurityHeadersConfig": {
            "ContentTypeOptions": {
              "Override": true,
            },
            "FrameOptions": {
              "FrameOption": "DENY",
              "Override": true,
            },
            "ReferrerPolicy": {
              "Override": true,
              "ReferrerPolicy": "no-referrer",
            },
            "StrictTransportSecurity": {
              "AccessControlMaxAgeSec": 31536000,
              "IncludeSubdomains": true,
              "Override": false,
              "Preload": true,
            },
            "XSSProtection": {
              "ModeBlock": true,
              "Override": true,
              "Protection": true,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
    "cloudfrontOAID153E53B": {
      "Properties": {
        "CloudFrontOriginAccessIdentityConfig": {
          "Comment": "OAI for TestSharedStack",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
